--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -13,12 +13,12 @@
           {% else %}
           class="nav-item mr-3"
       {% endif %}>
-        <a class="nav-link" href="{% url 'index' %}">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="{% url 'myapp:index' %}">Home <span class="sr-only">(current)</span></a>
       </li>
       <li {% if 'about/' in request.path %}
           class="nav-item active mr-3"
       {% endif %} >
-        <a class="nav-link" href="{% url 'about' %}">about</a>
+        <a class="nav-link" href="{% url 'myapp:about' %}">about</a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -35,9 +35,16 @@
         <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
       </li>
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
+
+
+    <div class="col-md-10">
+        <ul>
+            <li><a href="{% url 'account:login'%}">Login<i class="sign-in-alt"></i></a></li>
+            <li><a href="{% url 'account:signUp'%}">signUP<i class=""></i></a></li>
+            <li><a href="{% url 'account:post_list'%}">post_list<i></i></a></li>
+
+
+        </ul>
+    </div>
   </div>
 </nav>
